force-app/main/default/objects/SB_Product__c/fields/Profit_Centre__c.field-meta.xml
<CustomField>
    <fullName>Profit_Centre__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The general ledger (GL) unit profit centre that the revenue/asset will be allocated to. This value is dependent on the Legal Entity of Booking selected.</inlineHelpText>
    <label>Profit Centre</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Profit Centre code selected does not exist or apply to the Legal Entity of Booking selected. Adjust the selections as required.</errorMessage>
        <filterItems>
            <field>Option_List_Item__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Option_List_Item__c.Object__c</field>
            <operation>equals</operation>
            <value>Products</value>
        </filterItems>
        <filterItems>
            <field>Option_List_Item__c.Legal_Entity_of_Booking__c</field>
            <operation>contains</operation>
            <valueField>$Source.Balance_Sheet_of_Booking__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Option_List_Item__c</referenceTo>
    <relationshipLabel>RelatedProducts</relationshipLabel>
    <relationshipName>RelatedProducts</relationshipName>
    <type>Lookup</type>
</CustomField>