force-app/main/default/objects/SB_Product__c/fields/Purchase_price__c.field-meta.xml
<CustomField>
    <fullName>Purchase_price__c</fullName>
    <label>Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>