force-app/main/default/objects/SB_Product__c/fields/Recurring_flat_fee__c.field-meta.xml
<CustomField>
    <fullName>Recurring_flat_fee__c</fullName>
    <inlineHelpText>This is a monthly fee hence it is multipied by 12. For UFF assume 75% utilisation, therefore 25% unutilised - so calculate the monthly fee as R(full facility) x (25%) x (Annual UFF % Fee/12)</inlineHelpText>
    <label>Recurring Monthly Flat Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>