force-app/main/default/objects/SB_Product__c/fields/Renewal__c.field-meta.xml
<CustomField>
    <fullName>Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFP-5354  To be used if policy is renewable</description>
    <inlineHelpText>Please tick if this policy is renewable and enter Renewal Date</inlineHelpText>
    <label>Renewable</label>
    <type>Checkbox</type>
</CustomField>