force-app/main/default/objects/SB_Product__c/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <description>SFP-5354 Date when cover has to be renewed if opportunity is a renewal</description>
    <inlineHelpText>Enter the date cover will be renewed</inlineHelpText>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>