force-app/main/default/objects/SB_Product__c/fields/Reserving__c.field-meta.xml
<CustomField>
    <fullName>Reserving__c</fullName>
    <description>Insert the applicable cost of Reserving (bps) SGPRT-625</description>
    <inlineHelpText>Insert the applicable cost of Reserving (bps)</inlineHelpText>
    <label>Reserving (bps)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>