force-app/main/default/objects/SB_Product__c/fields/Risk_Grade__c.field-meta.xml
<CustomField>
    <fullName>Risk_Grade__c</fullName>
    <inlineHelpText>Enter the applicable transaction specific risk grade i.e. SB01-SB25/D1-D3</inlineHelpText>
    <label>Risk Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>