force-app/main/default/objects/SB_Product__c/fields/Risk_Weighted_Assets__c.field-meta.xml
<CustomField>
    <fullName>Risk_Weighted_Assets__c</fullName>
    <label>Risk Weighted Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>