force-app/main/default/objects/SB_Product__c/fields/Risk_Weighted_Value__c.field-meta.xml
<CustomField>
    <fullName>Risk_Weighted_Value__c</fullName>
    <description>Enter the probability of receiving this fee</description>
    <inlineHelpText>Enter the probability of receiving this fee</inlineHelpText>
    <label>Risk Weighted Value (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>