force-app/main/default/objects/SB_Product__c/fields/ROE__c.field-meta.xml
<CustomField>
    <fullName>ROE__c</fullName>
    <label>ROE (%)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>