force-app/main/default/objects/SB_Product__c/fields/Roll_over__c.field-meta.xml
<CustomField>
    <fullName>Roll_over__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Roll Over</label>
    <type>Checkbox</type>
</CustomField>