force-app/main/default/objects/SB_Product__c/fields/RORAC__c.field-meta.xml
<CustomField>
    <fullName>RORAC__c</fullName>
    <inlineHelpText>Deal specific RAROC for this specific product</inlineHelpText>
    <label>RAROC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>