force-app/main/default/objects/SB_Product__c/fields/SA_Amount__c.field-meta.xml
<CustomField>
    <fullName>SA_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>