force-app/main/default/objects/SB_Product__c/fields/SA_Average_Monthly_Balance__c.field-meta.xml
<CustomField>
    <fullName>SA_Average_Monthly_Balance__c</fullName>
    <label>Average Monthly Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>