force-app/main/default/objects/SB_Product__c/fields/SA_Book__c.field-meta.xml
<CustomField>
    <fullName>SA_Book__c</fullName>
    <description>Case#1146 - Rudolf Niehaus - 03/2011</description>
    <inlineHelpText>Trading Book where Revenue should reflect</inlineHelpText>
    <label>Book</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Trading_Area__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>10086 : CIB : Merrill Book</fullName>
            </value>
            <value>
                <fullName>10452 : CIB : FX CCY Options &amp; Structure</fullName>
            </value>
            <value>
                <fullName>10453 : CIB : Fixed Int Trading</fullName>
            </value>
            <value>
                <fullName>10455 : CIB : G7</fullName>
            </value>
            <value>
                <fullName>10459 : CIB : IRD Money Mkt</fullName>
            </value>
            <value>
                <fullName>10460 : CIB : Interest Rate Desk</fullName>
            </value>
            <value>
                <fullName>10461 : CIB : Quantitive Applications</fullName>
            </value>
            <value>
                <fullName>10464 : CIB : Forex Curve</fullName>
            </value>
            <value>
                <fullName>10728 : CIB : Cap Mkt Pfolios</fullName>
            </value>
            <value>
                <fullName>10729 : CIB : Forex Profits Management</fullName>
            </value>
            <value>
                <fullName>10730 : CIB : CPI Swaps</fullName>
            </value>
            <value>
                <fullName>10732 : CIB : GM-Central</fullName>
            </value>
            <value>
                <fullName>11402 : CIB : Prudential Balances</fullName>
            </value>
            <value>
                <fullName>11404 : CIB : FX - PTA Rep Office</fullName>
            </value>
            <value>
                <fullName>11405 : CIB : FX Cape Town Rep Office</fullName>
            </value>
            <value>
                <fullName>11406 : CIB : FX Durban Rep Office</fullName>
            </value>
            <value>
                <fullName>11477 : CIB : International Finance</fullName>
            </value>
            <value>
                <fullName>11639 : CIB : Forex Agri Futures</fullName>
            </value>
            <value>
                <fullName>11640 : CIB : Rand Options</fullName>
            </value>
            <value>
                <fullName>11641 : CIB : Prime</fullName>
            </value>
            <value>
                <fullName>12468 : CIB : Hedging Strategies</fullName>
            </value>
            <value>
                <fullName>12473 : CIB : FX - Foreign Note Trading</fullName>
            </value>
            <value>
                <fullName>12476 : CIB : Base Metals &amp; Energy</fullName>
            </value>
            <value>
                <fullName>125 : CIB : FX Port Elizabeth Rep Office</fullName>
            </value>
            <value>
                <fullName>13755 : CIB : Equity Derivatives</fullName>
            </value>
            <value>
                <fullName>1410 : CIB : FX JHB Corporate Dealing</fullName>
            </value>
            <value>
                <fullName>1426 : CIB : Money Markets Johannesburg</fullName>
            </value>
            <value>
                <fullName>1441 : CIB : FX Central</fullName>
            </value>
            <value>
                <fullName>14683 : CIB : Forex Arbitrage</fullName>
            </value>
            <value>
                <fullName>14686 : CIB : DCMT-Credit Derivatives</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>