force-app/main/default/objects/SB_Product__c/fields/SA_Client_Pays_Rate__c.field-meta.xml
<CustomField>
    <fullName>SA_Client_Pays_Rate__c</fullName>
    <description>VI 05032010 change type from currency for IRD</description>
    <label>Client Pays Rate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>