force-app/main/default/objects/SB_Product__c/fields/SA_Current_known_conflict_of_interest__c.field-meta.xml
<CustomField>
    <fullName>SA_Current_known_conflict_of_interest__c</fullName>
    <inlineHelpText>Please describe any current known internal or external conflicts of interest. if none, please enter the value &quot;none&quot;.</inlineHelpText>
    <label>Current Known Conflict of Interest?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>