force-app/main/default/objects/SB_Product__c/fields/SA_Deal_Id__c.field-meta.xml
<CustomField>
    <fullName>SA_Deal_Id__c</fullName>
    <description>8/11/2010 VI: made unique as per Production incident requirment;  IRD field</description>
    <inlineHelpText>The Global Market&apos;s (GM) Trade System generated ID, which feeds downstream systems for revenue reporting for Structured GM Products (30 characters or less)</inlineHelpText>
    <label>Deal Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>