force-app/main/default/objects/SB_Product__c/fields/SA_Deal_Target__c.field-meta.xml
<CustomField>
    <fullName>SA_Deal_Target__c</fullName>
    <inlineHelpText>Enter the potential acquisition target</inlineHelpText>
    <label>Deal Target</label>
    <length>80</length>
    <type>Text</type>
</CustomField>