force-app/main/default/objects/SB_Product__c/fields/SA_External__c.field-meta.xml
<CustomField>
    <fullName>SA_External__c</fullName>
    <defaultValue>true</defaultValue>
    <description>IRD field</description>
    <label>External</label>
    <type>Checkbox</type>
</CustomField>