force-app/main/default/objects/SB_Product__c/fields/SA_Fund_Administrator__c.field-meta.xml
<CustomField>
    <fullName>SA_Fund_Administrator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Complete this field if the opportunity originates from a Fund administrator who is opening an account on behalf of a client</inlineHelpText>
    <label>Fund Administrator</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Products3</relationshipName>
    <type>Lookup</type>
</CustomField>