force-app/main/default/objects/SB_Product__c/fields/SA_Gross_P_L_Amount_in_R__c.field-meta.xml
<CustomField>
    <fullName>SA_Gross_P_L_Amount_in_R__c</fullName>
    <label>Gross P&amp;L Amount (in R)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>