force-app/main/default/objects/SB_Product__c/fields/SA_Internal__c.field-meta.xml
<CustomField>
    <fullName>SA_Internal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IRD field</description>
    <label>Internal</label>
    <type>Checkbox</type>
</CustomField>