force-app/main/default/objects/SB_Product__c/fields/SA_IRD_Desk__c.field-meta.xml
<CustomField>
    <fullName>SA_IRD_Desk__c</fullName>
    <label>Desk</label>
    <length>100</length>
    <type>Text</type>
</CustomField>