force-app/main/default/objects/SB_Product__c/fields/SA_IRD_Product__c.field-meta.xml
<CustomField>
    <fullName>SA_IRD_Product__c</fullName>
    <description>IRD product list used in IRD Product capture vf page. Must be maintained in conjuction with records from SA IRD Product Hierarchy object whenever a new Product is added or any amendments are made to IRD products.</description>
    <label>IRD Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bond Forward</fullName>
            </value>
            <value>
                <fullName>Bond Option</fullName>
            </value>
            <value>
                <fullName>Bond Repo</fullName>
            </value>
            <value>
                <fullName>Cancellable Swap</fullName>
            </value>
            <value>
                <fullName>Cap</fullName>
            </value>
            <value>
                <fullName>Collar</fullName>
            </value>
            <value>
                <fullName>Convertible Note</fullName>
            </value>
            <value>
                <fullName>CPI Annuity</fullName>
            </value>
            <value>
                <fullName>CPI Swap</fullName>
            </value>
            <value>
                <fullName>Credit Default Swap</fullName>
            </value>
            <value>
                <fullName>Credit Linked Note</fullName>
            </value>
            <value>
                <fullName>Cross Currency Interest Rate Swap</fullName>
            </value>
            <value>
                <fullName>Exotic Structured Product</fullName>
            </value>
            <value>
                <fullName>Extendible Note</fullName>
            </value>
            <value>
                <fullName>Extendible Swap</fullName>
            </value>
            <value>
                <fullName>Extinguishable Cross Currency Interest Rate Swap</fullName>
            </value>
            <value>
                <fullName>Fixed Rate Note</fullName>
            </value>
            <value>
                <fullName>Floating Rate Structure</fullName>
            </value>
            <value>
                <fullName>Floor</fullName>
            </value>
            <value>
                <fullName>Forward Rate Agreement (Fra)</fullName>
            </value>
            <value>
                <fullName>Interest Rate Swap</fullName>
            </value>
            <value>
                <fullName>Long Dated Annuity</fullName>
            </value>
            <value>
                <fullName>Long Dated Forward</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other Credit Derivatives</fullName>
            </value>
            <value>
                <fullName>Prime Swap</fullName>
            </value>
            <value>
                <fullName>Range Accrual</fullName>
            </value>
            <value>
                <fullName>Replica Note</fullName>
            </value>
            <value>
                <fullName>Restructured Note</fullName>
            </value>
            <value>
                <fullName>Reverse Annuity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>