force-app/main/default/objects/SB_Product__c/fields/SA_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>SA_Maturity_Date__c</fullName>
    <description>Case#1146 - Rudolf Niehaus - 03/2011</description>
    <inlineHelpText>Date of Termination/Expiry</inlineHelpText>
    <label>Maturity Date</label>
    <type>Date</type>
</CustomField>