force-app/main/default/objects/SB_Product__c/fields/SA_Nominal_Amount__c.field-meta.xml
<CustomField>
    <fullName>SA_Nominal_Amount__c</fullName>
    <description>Case#1146 - Rudolf Niehaus - 03/2011</description>
    <inlineHelpText>Nominal/Notional/Principle amount</inlineHelpText>
    <label>Transaction Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>