force-app/main/default/objects/SB_Product__c/fields/SA_Points_to_Hedge__c.field-meta.xml
<CustomField>
    <fullName>SA_Points_to_Hedge__c</fullName>
    <label>Points to Hedge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>