force-app/main/default/objects/SB_Product__c/fields/SA_PV01__c.field-meta.xml
<CustomField>
    <fullName>SA_PV01__c</fullName>
    <inlineHelpText>For Interest Rate Derivative Products only (80 characters or less)</inlineHelpText>
    <label>PV01</label>
    <length>80</length>
    <type>Text</type>
</CustomField>