force-app/main/default/objects/SB_Product__c/fields/SA_Rate__c.field-meta.xml
<CustomField>
    <fullName>SA_Rate__c</fullName>
    <description>SHAVEEN 12NOV2010 CASE599 &gt; Changed from Currency to Percentage.</description>
    <label>Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>