force-app/main/default/objects/SB_Product__c/fields/SA_SA__c.field-meta.xml
<CustomField>
    <fullName>SA_SA__c</fullName>
    <defaultValue>true</defaultValue>
    <description>IRD Field</description>
    <label>SA</label>
    <type>Checkbox</type>
</CustomField>