force-app/main/default/objects/SB_Product__c/fields/SA_Target_Entity2__c.field-meta.xml
<CustomField>
    <fullName>SA_Target_Entity2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Products_Target_Entity</relationshipName>
    <type>Lookup</type>
</CustomField>