force-app/main/default/objects/SB_Product__c/fields/SA_Total_Fee__c.field-meta.xml
<CustomField>
    <fullName>SA_Total_Fee__c</fullName>
    <formula>( Fee_Comm__c * Volume_Transactional__c * Term_Tenor__c ) + ( Value_fee__c  * Value__c * Term_Tenor__c ) + ( Recurring_flat_fee__c  * Term_Tenor__c ) + Flat_fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Fees (calculated) is an automatically calculated value based on the the expected &apos;volumes&apos; multipled by the transaction &apos;Fees&apos; and then annualised by the Term / Tenor (months).</inlineHelpText>
    <label>Total Fees (calculated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>