force-app/main/default/objects/SB_Product__c/fields/SA_Total_Margin__c.field-meta.xml
<CustomField>
    <fullName>SA_Total_Margin__c</fullName>
    <formula>(SA_Average_Monthly_Balance__c * SA_TPS_Margin__c ) * ( Term_Tenor__c  / 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total margin (calculated) is an automatically calculated value based on the the Average Monthly Balance multipled by the TPS Margin annualised by the Term / Tenor (months).</inlineHelpText>
    <label>Total Margin (calculated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>