force-app/main/default/objects/SB_Product__c/fields/SA_TPS_Margin__c.field-meta.xml
<CustomField>
    <fullName>SA_TPS_Margin__c</fullName>
    <label>TPS Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>