force-app/main/default/objects/SB_Product__c/fields/SA_Trade_Date__c.field-meta.xml
<CustomField>
    <fullName>SA_Trade_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Case#1146 - Rudolf Niehaus - 03/2011</description>
    <inlineHelpText>Date of Trade Execution</inlineHelpText>
    <label>Trade Date</label>
    <type>Date</type>
</CustomField>