force-app/main/default/objects/SB_Product__c/fields/SA_Week__c.field-meta.xml
<CustomField>
    <fullName>SA_Week__c</fullName>
    <label>Week</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>