force-app/main/default/objects/SB_Product__c/fields/SB_Gross_Participation__c.field-meta.xml
<CustomField>
    <fullName>SB_Gross_Participation__c</fullName>
    <description>The amount that SB will be providing the client in relation to the specific facility. Field name changes - Notional Field values. SGPRT-1229</description>
    <inlineHelpText>The amount that SB will be providing the client in relation to the specific facility (sum of the selldown and the amount SB will hold)</inlineHelpText>
    <label>SB Gross Participation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>