force-app/main/default/objects/SB_Product__c/fields/SB_Gross_Participation_Num__c.field-meta.xml
<CustomField>
    <fullName>SB_Gross_Participation_Num__c</fullName>
    <description>Field to be used in roll-up summary field on opportunity. Nation Value currency field can&apos;t be used directly in roll-up since Advanced Multi-currency is Enabled in org. US-2276,  SGPRT-1229</description>
    <formula>SB_Gross_Participation__c / ExchangeRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount that SB will be providing the client in relation to the specific facility (sum of the selldown and the amount SB will hold)</inlineHelpText>
    <label>SB Gross Participation (Num)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>