force-app/main/default/objects/SB_Product__c/fields/SB_Hold__c.field-meta.xml
<CustomField>
    <fullName>SB_Hold__c</fullName>
    <description>SB&apos;s credit approved hold amount in relation to the specific facility SGPRT-625</description>
    <inlineHelpText>SB&apos;s credit approved hold amount in relation to the specific facility.</inlineHelpText>
    <label>SB Hold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>