force-app/main/default/objects/SB_Product__c/fields/SB_Sell_Down__c.field-meta.xml
<CustomField>
    <fullName>SB_Sell_Down__c</fullName>
    <description>The amount of SB&apos;s gross participation in the facility to be sold down post close. SGPRT-625</description>
    <inlineHelpText>The amount of SB&apos;s gross participation in the facility to be sold down post close</inlineHelpText>
    <label>SB Sell Down</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>