force-app/main/default/objects/SB_Product__c/fields/Security_Offered__c.field-meta.xml
<CustomField>
    <fullName>Security_Offered__c</fullName>
    <label>Security Offered</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bonds</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Commodity</fullName>
            </value>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Receivables</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>