force-app/main/default/objects/SB_Product__c/fields/Sell_Down__c.field-meta.xml
<CustomField>
    <fullName>Sell_Down__c</fullName>
    <label>Sell Down</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>