force-app/main/default/objects/SB_Product__c/fields/Set_Facility_Price__c.field-meta.xml
<CustomField>
    <fullName>Set_Facility_Price__c</fullName>
    <description>Set price given by SBSA as Arranger for debt syndication expressed as %. SGPRT-626</description>
    <inlineHelpText>Set Price given by Arranger for debt syndication expressed in %</inlineHelpText>
    <label>Set Facility Price (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>