force-app/main/default/objects/SB_Product__c/fields/Show_SB_Product__c.field-meta.xml
<CustomField>
    <fullName>Show_SB_Product__c</fullName>
    <description>Used to display URL</description>
    <formula>LEFT($Api.Enterprise_Server_URL_350, FIND(&apos;/services&apos;, $Api.Enterprise_Server_URL_350)) + Id</formula>
    <label>Show SB Product</label>
    <type>Text</type>
</CustomField>