force-app/main/default/objects/SB_Product__c/fields/Sought__c.field-meta.xml
<CustomField>
    <fullName>Sought__c</fullName>
    <description>Case #135 C Reinecke 08/12/2010</description>
    <inlineHelpText>If an Existing Facility is decreasing please add a New Facility (Product) with negative ‘Sought Facilities’ to reflect the decreasing Existing Facility</inlineHelpText>
    <label>Sought Facilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>