force-app/main/default/objects/SB_Product__c/fields/Structuring_Fee_bps__c.field-meta.xml
<CustomField>
    <fullName>Structuring_Fee_bps__c</fullName>
    <description>Upfront fee expressed in bps to be earned by SB for structuring of a bi-lateral/club project finance facility excl. participation fees, underwrite fees or arranging fees
SGPRT-625</description>
    <inlineHelpText>Upfront fee expressed in bps to be earned by SB for structuring of a bi-lateral/club project finance facility excl. participation fees, underwrite fees or arranging fees</inlineHelpText>
    <label>Structuring Fee (bps)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>