force-app/main/default/objects/SB_Product__c/fields/Subsidiary_of_target_Client__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_of_target_Client__c</fullName>
    <inlineHelpText>Enter the subsidiary of the Target Client (255 characters or less)</inlineHelpText>
    <label>Subsidiary of target Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>