force-app/main/default/objects/SB_Product__c/fields/Total_Ancillary_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Ancillary_Income__c</fullName>
    <description>Future/ potential Opportunities with the client that could earn additional income SGPRT-625</description>
    <inlineHelpText>Future/ potential Opportunities with the client that could earn additional income</inlineHelpText>
    <label>Total Ancillary Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>