force-app/main/default/objects/SB_Product__c/fields/Total_Commission__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission__c</fullName>
    <description>SFP-6290 - The Estimated Total Commission that is anticipated for this product on this opportunity.</description>
    <inlineHelpText>The Estimated Total Commission that is anticipated for this product on this opportunity.</inlineHelpText>
    <label>Total Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>