force-app/main/default/objects/SB_Product__c/fields/Total_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Fees__c</fullName>
    <inlineHelpText>The Estimated Total Fees that is anticipated for this product on this opportunity.</inlineHelpText>
    <label>Total Fees</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>