force-app/main/default/objects/SB_Product__c/fields/Total_Margin__c.field-meta.xml
<CustomField>
    <fullName>Total_Margin__c</fullName>
    <inlineHelpText>The Estimated Total Margin that is anticipated for this product on this opportunity.</inlineHelpText>
    <label>Total Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>