force-app/main/default/objects/SB_Product__c/fields/Total_Other__c.field-meta.xml
<CustomField>
    <fullName>Total_Other__c</fullName>
    <defaultValue>IF ($RecordType.DeveloperName = &quot;Transactional&quot;, 0 , null )</defaultValue>
    <label>Total Other</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>