force-app/main/default/objects/SB_Product__c/fields/Total_Product_Revenue_Text__c.field-meta.xml
<CustomField>
    <fullName>Total_Product_Revenue_Text__c</fullName>
    <description>This field has been created to store the product&apos;s Total Product Revenue in a text format for the TPS feed. Using the Total Product Revenue field, there were issues in the field format which could not be read by Team Tracker.</description>
    <formula>TEXT(Total_Revenue_Currency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Product Revenue (Text)</label>
    <type>Text</type>
</CustomField>