force-app/main/default/objects/SB_Product__c/fields/Total_Residual_Undrawn_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Total_Residual_Undrawn_Rollup__c</fullName>
    <description>Case#141 - Rudolf Niehaus Available Loan Amount(Notional Value – Sell Down – Sum of Total Funding Required</description>
    <formula>( SB_Gross_Participation__c -  Sell_Down__c -  Funding_Required_Rollup__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>SB Gross Participation – Sell Down – Funding Required</inlineHelpText>
    <label>Total Residual Undrawn</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>