force-app/main/default/objects/SB_Product__c/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <formula>(Total_Fees__c +  Total_Margin__c  +  Total_Other__c) *  Opportunity__r.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Equals the Total Revenue * the Opportunity Probability Percentage</inlineHelpText>
    <label>Total Weighted Product Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>