force-app/main/default/objects/SB_Product__c/fields/total_revenue_amount__c.field-meta.xml
<CustomField>
    <fullName>total_revenue_amount__c</fullName>
    <description>The revenue that is anticipated for this product&apos;s lifetime on this opportunity (EN-896).</description>
    <inlineHelpText>The revenue that is anticipated for this product&apos;s lifetime on this opportunity.</inlineHelpText>
    <label>Total Revenue (Amount)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>