force-app/main/default/objects/SB_Product__c/fields/Total_Revenue_Currency__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_Currency__c</fullName>
    <description>Sum of Total_Fees__c + Total_Margin__c + Total_Other__c  + total_revenue_amount__c + Total_Commission__c 
 without Probability weighting.</description>
    <formula>Total_Fees__c + Total_Margin__c + Total_Other__c + total_revenue_amount__c + Total_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of Total Fees, Total Margin, Total Other, Total Revenue (Amount)</inlineHelpText>
    <label>Total Product Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>